# WanCli

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: publish.yml
deploy/production/: deployment.yaml  service.yaml
tests/: conftest.py  test_client.py  test_commands.py  test_config.py  test_integration.py  test_output.py
wan_cli/: __init__.py  __main__.py  main.py
wan_cli/commands/: __init__.py  info.py  task.py  video.py
wan_cli/core/: __init__.py  client.py  config.py  exceptions.py  output.py
